--- a/_data/projects.json
+++ b/_data/projects.json
@@ -383,21 +383,21 @@
                 "description": "Create agenda",
                 "owner": "Harold",
                 "project_name": "OWASP Virtual Training Day",
-                "status": "on-time"
+                "status": "overdue"
             },
             {
                 "milestone_date": "2020-03-25",
                 "description": "Stand up event page",
                 "owner": "Harold",
                 "project_name": "OWASP Virtual Training Day",
-                "status": "on-time"
+                "status": "overdue"
             },
             {
                 "milestone_date": "2020-03-25",
                 "description": "CTF Milestones",
                 "owner": "Kelly",
                 "project_name": "OWASP Virtual Training Day",
-                "status": "on-time"
+                "status": "overdue"
             },
             {
                 "milestone_date": "2020-03-30",
@@ -589,6 +589,13 @@
     {
         "name": "BlackHat Las Vegas",
         "milestones": [
+            {
+                "milestone_date": "2020-03-30",
+                "description": "OSD-3654](https://owasporg.atlassian.net/browse/OSD-3654) Contract for ED signature",
+                "owner": "Mike",
+                "project_name": "BlackHat Las Vegas",
+                "status": "on-time"
+            },
             {
                 "milestone_date": "2020-07-27",
                 "description": "end out Wufoo Volunteer form through Meetup again for new date/",
