remote update file

--- a/_data/projects.json
+++ b/_data/projects.json
@@ -404,14 +404,14 @@
                 "description": "Announce Program",
                 "owner": "Emily",
                 "project_name": "OWASP Virtual Training Day",
-                "status": "on-time"
+                "status": "overdue"
             },
             {
                 "milestone_date": "2020-03-30",
                 "description": "Launch registration",
                 "owner": "Emily",
                 "project_name": "OWASP Virtual Training Day",
-                "status": "on-time"
+                "status": "overdue"
             },
             {
                 "milestone_date": "2020-04-10",
