remote update file

--- a/_data/projects.json
+++ b/_data/projects.json
@@ -718,7 +718,7 @@
                 "description": "Keynotes Announces",
                 "owner": "Emily",
                 "project_name": "Global AppSec - San Francisco",
-                "status": "future"
+                "status": "on-time"
             },
             {
                 "milestone_date": "2020-08-01",
@@ -822,7 +822,7 @@
                 "description": "NEW Sign CCD contract",
                 "owner": "Mike",
                 "project_name": "Global AppSec - Dublin 2021",
-                "status": "future"
+                "status": "on-time"
             },
             {
                 "milestone_date": "2020-03-15",
@@ -843,7 +843,7 @@
                 "description": "Training Schedule Announced",
                 "owner": "Emily",
                 "project_name": "Global AppSec - Dublin 2021",
-                "status": "future"
+                "status": "on-time"
             },
             {
                 "milestone_date": "2020-04-15",
@@ -878,7 +878,7 @@
                 "description": "Keynotes Announced",
                 "owner": "Emily",
                 "project_name": "Global AppSec - Dublin 2021",
-                "status": "future"
+                "status": "on-time"
             },
             {
                 "milestone_date": "2020-06-01",
