--- a/_data/projects.json
+++ b/_data/projects.json
@@ -458,7 +458,7 @@
                 "description": "Venue contract signed",
                 "owner": "Emily",
                 "project_name": "Projects Summit - Summer",
-                "status": "future"
+                "status": "on-time"
             },
             {
                 "milestone_date": "2020-06-05",
@@ -697,7 +697,7 @@
                 "description": "Registration Opens",
                 "owner": "Emily",
                 "project_name": "Global AppSec - San Francisco",
-                "status": "on-time"
+                "status": "overdue"
             },
             {
                 "milestone_date": "2020-04-20",
