remote update file

--- a/_data/projects.json
+++ b/_data/projects.json
@@ -322,7 +322,7 @@
                 "description": "Close P&L",
                 "owner": "Emily",
                 "project_name": "OWASP SnowFROC",
-                "status": "future"
+                "status": "on-time"
             }
         ],
         "description": "Each project will have a 2-3 paragraph overview narrative. Keep to the key top points about the project. Visitors should be able to read this short narrative and have a good understanding of the project without having to scroll the entire document.",
