remote update file

--- a/_data/projects.json
+++ b/_data/projects.json
@@ -92,7 +92,7 @@
                 "description": "Memorial Day",
                 "owner": "No Owner",
                 "project_name": "OWASP Staff Holidays",
-                "status": "future"
+                "status": "on-time"
             },
             {
                 "milestone_date": "2020-07-03",
