remote update file

--- a/_data/projects.json
+++ b/_data/projects.json
@@ -424,30 +424,100 @@
                 "status": "on-time"
             },
             {
-                "milestone_date": "2020-05-15",
-                "description": "Artwork - (stickers, t-shirts?, postcard)",
+                "milestone_date": "2020-05-08",
+                "description": "Budget complete",
                 "owner": "No Owner",
                 "project_name": "DEFCON 28",
                 "status": "on-time"
             },
             {
-                "milestone_date": "2020-05-18",
-                "description": "Confirm and approve all artwork",
+                "milestone_date": "2020-05-15",
+                "description": "Booth layout complete with signage config",
                 "owner": "Mike",
                 "project_name": "DEFCON 28",
                 "status": "on-time"
             },
             {
+                "milestone_date": "2020-05-18",
+                "description": "Artwork Start",
+                "owner": "No Owner",
+                "project_name": "DEFCON 28",
+                "status": "on-time"
+            },
+            {
                 "milestone_date": "2020-06-01",
-                "description": "Application accepted Go or NO Go",
+                "description": "Notice provided by DEFCON to Vendors",
                 "owner": "No Owner",
                 "project_name": "DEFCON 28",
                 "status": "future"
             },
             {
-                "milestone_date": "2020-07-02",
-                "description": "olunteers (must be OWASP members) identified (wufoo)",
+                "milestone_date": "2020-06-08",
+                "description": "Confirm and approve all artwork",
+                "owner": "Mike",
+                "project_name": "DEFCON 28",
+                "status": "future"
+            },
+            {
+                "milestone_date": "2020-06-08",
+                "description": "Order Diversity in AppSec coins",
                 "owner": "Lisa",
+                "project_name": "DEFCON 28",
+                "status": "future"
+            },
+            {
+                "milestone_date": "2020-07-01",
+                "description": "Order Shirts/Stickers to be shipped to LV (location?)",
+                "owner": "Lisa",
+                "project_name": "DEFCON 28",
+                "status": "future"
+            },
+            {
+                "milestone_date": "2020-07-02",
+                "description": "Volunteer Signup Form online (preference given to members)",
+                "owner": "Lisa",
+                "project_name": "DEFCON 28",
+                "status": "future"
+            },
+            {
+                "milestone_date": "2020-07-24",
+                "description": "Close volunteer signup form",
+                "owner": "Mike",
+                "project_name": "DEFCON 28",
+                "status": "future"
+            },
+            {
+                "milestone_date": "2020-07-27",
+                "description": "Notify selected volunteers",
+                "owner": "Lisa",
+                "project_name": "DEFCON 28",
+                "status": "future"
+            },
+            {
+                "milestone_date": "2020-08-06",
+                "description": "DEFCON Booth Setup",
+                "owner": "No Owner",
+                "project_name": "DEFCON 28",
+                "status": "future"
+            },
+            {
+                "milestone_date": "2020-08-07",
+                "description": "DEFCON Day 1",
+                "owner": "No Owner",
+                "project_name": "DEFCON 28",
+                "status": "future"
+            },
+            {
+                "milestone_date": "2020-08-08",
+                "description": "DEFCON Day 2",
+                "owner": "No Owner",
+                "project_name": "DEFCON 28",
+                "status": "future"
+            },
+            {
+                "milestone_date": "2020-08-09",
+                "description": "DEFCON Day 3",
+                "owner": "No Owner",
                 "project_name": "DEFCON 28",
                 "status": "future"
             }
